--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
     "bootstrap-dark-5": "^1.1.3",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
