--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
