--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,8 +2,15 @@
     "version": 2,
     "builds": [
         {
-            "src": "./build/src/index.js",
-            "use": "@vercel/node"
+            "src": "build/src/index.js",
+            "use": "@vercel/node",
+            "config": { "includeFiles": ["build/src/**", "build/models/**", "build/src/routes/**"] }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "build/src/index.js"
         }
     ]
 }
