--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
   reactfrontend:
-    image: gofood-frontend:localV1
+    image: harshit1019/gofood-frontend:localV2
     ports:
       - "3000:3000"   
     depends_on:
       - nodebackend
   nodebackend:
-    image: harshit1019/gofood-backend:v2
+    image: harshit1019/gofood-backend:v3
     ports:
       - "8090:8090"   
     
