Multistages added in backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM --platform=linux/amd64 node:18
+# Build stage
+FROM --platform=linux/amd64 node:18 as build
 
 # Working dir
 WORKDIR /usr/src/app
@@ -15,10 +16,26 @@ COPY . .
 # Build
 RUN npm run build
 
-# Expose the API port
+
+# Production stage
+FROM node:20-alpine3.17
+
+# Working dir
+WORKDIR /usr/src/app
+
+# Copy package.json
+COPY --from=build /usr/src/app/package*.json ./ 
+
+# Install dependencies
+RUN npm install
+
+# Copy Build
+COPY --from=build /usr/src/app/build ./build
+
+# Expose 8090 Port
 EXPOSE 8090
 
-# Run the application
+# Run 
 CMD [ "node", "build/src/index.js" ]
 
 
