--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
 
 stages:
 - stage: BuildPush_React_image
-  displayName: Build & Push React image
+  displayName: Build & Push Docker Images
   jobs:
   - job: Build
     displayName: Build
@@ -21,6 +21,7 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
+      displayName: Build&Push_React_Image
       inputs:
         containerRegistry: 'DockerHub'
         repository: 'harshit1019/gofood-frontend'
@@ -28,18 +29,13 @@ stages:
         Dockerfile: '**/Dockerfile'
         tags: '$(tag)'
 
-- stage: BuildPush_Nodejs_image
-  displayName: Build & Push Nodejs image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
     - task: Docker@2
+      displayName: Build&Push_Nodejs_Image
       inputs:
         containerRegistry: 'DockerHub'
-        repository: 'harshit1019/gofood-frontend'
+        repository: 'harshit1019/gofood-backend'
         command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
+        Dockerfile: '/backend/'
         tags: '$(tag)'
+
+    
