--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
         containerRegistry: 'DockerHub'
         repository: 'harshit1019/gofood-backend'
         command: 'buildAndPush'
-        Dockerfile: '/backend/'
+        Dockerfile: '/backend/**Dockerfile'
         tags: '$(tag)'
 
     
