--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
   tag: '$(Build.BuildId)'
 
 stages:
-- stage: Docker
+- stage: Docker Image Push
   displayName: Build & Push Docker Images
   jobs:
   - job: Build
@@ -21,7 +21,7 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build&Push_Nodejs_Image
+      displayName: Build_&_Push_Nodejs_Image
       inputs:
         containerRegistry: 'DockerHub'
         repository: 'harshit1019/gofood-backend'
@@ -29,8 +29,8 @@ stages:
         Dockerfile: '$(Build.SourcesDirectory)/backend/Dockerfile'
         tags: '$(tag)'
 
-- stage: Deploy Backend
-  displayName: Deploy backend to WebApp
+- stage: Deploy_Backend
+  displayName: Deploy_backend_to_WebApp
   jobs:
   - job: Build
     displayName: Build
