--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
   tag: '$(Build.BuildId)'
 
 stages:
-- stage: Docker Image Push
+- stage: Docker_Image_Push
   displayName: Build & Push Docker Images
   jobs:
   - job: Build
