--- a/.github/workflows/formatFiles.yml
+++ b/.github/workflows/formatFiles.yml
@@ -7,9 +7,8 @@ on:
 
 permissions:
     contents: write
-    pull-requests: write
-    repository-projects: write
-    checks: write
+    actions: write
+
 
 jobs:
     call-prettier-workflow:
